TM-1011 : Resolved comment # 6 as at task details page edit and delete button was wrapping at chrome .
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@2664 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/tds.css
+++ b/web-app/css/tds.css
@@ -1152,6 +1152,11 @@ a.tab_deselect {
 	-webkit-box-shadow: 0px 3px 3px #888;
 	box-shadow: 0px 3px 3px #888;
 }
+.slide { 
+    float: left;
+    margin-left: 5px;
+}
+
 a.task_action{float: left; position: relative; margin: 0 0 0 30px;cursor: pointer;}
 a.task_action span.task_icon{position: absolute; top: 0; left: 0;}
 a.task_action span.task_button{ float: left; height: 16px; line-height: 16px;  padding: 0 5px 0 15px;}
